Corrections height LodgeCard différent + wrap de la navbar + ajout d'un collapse pour le descriptionPanel

--- a/src/components/DescriptionPanel.scss
+++ b/src/components/DescriptionPanel.scss
@@ -4,6 +4,7 @@
     margin-bottom: 1em;
     flex-basis: 50%;
     overflow: hidden;
+    cursor: pointer;
     p {
         margin-block: 0em;
     }
