--- a/src/components/LodgeCard.scss
+++ b/src/components/LodgeCard.scss
@@ -6,7 +6,7 @@
     display: grid;
     align-items: end;
     min-width: 200px;
-    min-height: 200px;
+    min-height: 240px;
     background-size: cover;
     position: relative;
     img {
