--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -1,3 +1,13 @@
-.about__container{
+
+
+.about__container {
     padding-inline: 3rem;
-}
+  
+    .description__panel {
+  
+      &.collapsed {
+        margin-bottom: -2em; // Réduire la marge lorsque le panneau est replié
+      }
+    }
+  }
+  
